--- a/experiments/exp_v1.0.0/simulations/sim_02/iter_0001/config_snapshot.yml
+++ b/experiments/exp_v1.0.0/simulations/sim_02/iter_0001/config_snapshot.yml
@@ -9,12 +9,8 @@ X1_levels:
     X2:
       dist:
         name: rbeta
-        params:
-        - 2
-        - 5
-      support:
-      - 0
-      - 1
+        params: [2, 5]
+      support: [0, 1]
     m: 60
     ref_level: true
     level_of_interest: false
@@ -22,12 +18,8 @@ X1_levels:
     X2:
       dist:
         name: rbeta
-        params:
-        - 3
-        - 3
-      support:
-      - 0
-      - 1
+        params: [3, 3]
+      support: [0, 1]
     m: 60
     ref_level: false
     level_of_interest: true
@@ -35,26 +27,20 @@ X1_levels:
     X2:
       dist:
         name: rbeta
-        params:
-        - 5
-        - 2
-      support:
-      - 0
-      - 1
+        params: [5, 2]
+      support: [0, 1]
     m: 60
     ref_level: false
     level_of_interest: false
 model_specs:
   J: 6
   entropy_range_specs:
-    offset:
-    - 0.3
-    - 0.2
+    offset: [0.3, 0.2]
     padding: 0.75
   reps:
     Beta_0: 1000
     pY_0: 1000000
-  formula: Y~.^2 - 1
+  formula: "Y~.^2 - 1"
   p: 6
   'n': 180
 optimization_specs:
