--- a/applications/multinomial_logistic_regression/shared_effect/config/exp_config.yml
+++ b/applications/multinomial_logistic_regression/shared_effect/config/exp_config.yml
@@ -19,13 +19,13 @@ model:
 
   predictors:
     shared:
-      - name: Z
-        effect: 1.2                              # Shared effect across all logits
-        distribution:
-          type: normal
-          parameters:
-            mean: 0
-            sd: 1
+      name: Z
+      effect: 1.2                              # Shared effect across all logits
+      distribution:
+        type: normal
+        parameters:
+          mean: 0
+          sd: 1
 
     class_specific:
       - name: X1
