--- a/config/exps/exp_v2.0.0.yml
+++ b/config/exps/exp_v2.0.0.yml
@@ -16,7 +16,7 @@ model:
     num_effects: 5
   predictors:
     shared:
-    - name: Z
+      name: Z
       effect: 1.2
       distribution:
         type: normal
