--- a/experiments/exp_v2.0.0/simulations/sim_01/iter_01/config_snapshot.yml
+++ b/experiments/exp_v2.0.0/simulations/sim_01/iter_01/config_snapshot.yml
@@ -16,7 +16,7 @@ model:
     num_effects: 5
   predictors:
     shared:
-    - name: Z
+      name: Z
       effect: 1.2
       distribution:
         type: normal
