--- a/applications/multinomial_logistic_regression/shared_effect/config/optimization.yml
+++ b/applications/multinomial_logistic_regression/shared_effect/config/optimization.yml
@@ -2,9 +2,7 @@ IL:
   step_size: 0.01
   fine_step_size: 0.005
   fine_window: 0.05
-  num_std_errors: 5
-  init_guess_sd: 10
-  threshold_offset: 20
+  num_std_errors: [-3, 3]
   chunk_size: 4
 PL: 
   step_size: 0.01
