--- a/applications/multinomial_logistic_regression/shared_effect/config/exp_config.yml
+++ b/applications/multinomial_logistic_regression/shared_effect/config/exp_config.yml
@@ -6,16 +6,16 @@ experiment:
   iter_id: ~                                    # Iteration ID within a simulation
 
 data_generation:
-  seed: 5387                                    # Random seed for reproducibility
-  n_obs: 500                                    # Number of observations to simulate
+  seed: 1996                                    # Random seed for reproducibility
+  n_obs: 100                                    # Number of observations to simulate
   validate_only: false                          # If true, just validate config without simulating
 
 model:
   response:
     name: Y
-    num_classes: 6                              # Total number of response categories
-    reference_class: 6                          # Index (1-based) of the baseline category
-    num_effects: 5                              # Should equal num_classes - 1
+    num_classes: 15                              # Total number of response categories
+    reference_class: 15                          # Index (1-based) of the baseline category
+    num_effects: 14                              # Should equal num_classes - 1
 
   predictors:
     shared:
@@ -43,7 +43,33 @@ model:
           parameters:
             mean: 0
             sd: 1
+            
+      - name: X3
+        effects: [0.5, 0.5, -0.5, 0.0, 0.3]
+        distribution:
+          type: normal
+          parameters:
+            mean: 0
+            sd: 1
+            
+      - name: X4
+        effects: [0.5, 0.5, -0.5, 0.0, 0.3]
+        distribution:
+          type: normal
+          parameters:
+            mean: 0
+            sd: 1
+            
+      - name: X5
+        effects: [0.5, 0.5, -0.5, 0.0, 0.3]
+        distribution:
+          type: normal
+          parameters:
+            mean: 0
+            sd: 1
 
   intercepts: [0.5, -0.5, 0.2, -0.1, 0.0]        # One per non-reference class (length = num_effects)
 
   interactions: []                               # Optional future interaction terms
+  
+  formula: "Y ~ Z + (. - Z)^2"
