--- a/experiments/exp_v3.0.0/simulations/sim_01/iter_01/config_snapshot.yml
+++ b/experiments/exp_v3.0.0/simulations/sim_01/iter_01/config_snapshot.yml
@@ -1,11 +1,11 @@
 experiment:
   app: multinomial_logistic_regression
   estimand: shared_effect
-  id: exp_v2.0.0
+  id: exp_v3.0.0
   sim_id: sim_01
   iter_id: iter_01
 data_generation:
-  seed: 5387
+  seed: 1996
   n_obs: 500
   validate_only: false
 model:
@@ -55,7 +55,7 @@ model:
   - -0.1
   - 0.0
   interactions: []
-  formula: Y ~ Z + X1 + X2
+  formula: Y ~ Z + X1*X2
 optimization_specs:
   IL:
     step_size: 0.01
