--- a/applications/multinomial_logistic_regression/shared_effect/config/exp_config.yml
+++ b/applications/multinomial_logistic_regression/shared_effect/config/exp_config.yml
@@ -1,75 +1,96 @@
 experiment:
-  app: multinomial_logistic_regression          # Type of model
-  estimand: shared_effect                       # Parameter of interest
-  id: ~                                         # Experiment ID
-  sim_id: ~                                     # Simulation ID (if applicable)
-  iter_id: ~                                    # Iteration ID within a simulation
+  app: multinomial_logistic_regression
+  estimand: shared_effect
+  id: ~
+  sim_id: ~
+  iter_id: ~
 
 data_generation:
-  seed: 1996                                    # Random seed for reproducibility
-  n_obs: 100                                    # Number of observations to simulate
-  validate_only: false                          # If true, just validate config without simulating
+  seed: 1996
+  n_obs: 200
+  validate_only: false
 
 model:
   response:
-    name: Y
-    num_classes: 15                              # Total number of response categories
-    reference_class: 15                          # Index (1-based) of the baseline category
-    num_effects: 14                              # Should equal num_classes - 1
+    name: "Y"
+    num_classes: 6
+    reference_class: 6
+  
+  intercepts:
+    distribution: rnorm
+    parameters:
+      mean: 0
+      sd: 0.5
 
   predictors:
     shared:
-      name: Z
-      effect: 1.2                              # Shared effect across all logits
-      distribution:
-        type: normal
-        parameters:
-          mean: 0
-          sd: 1
+        name: Z
+        effect: 1.2
+        observations:
+          distribution: rnorm
+          parameters:
+            mean: 0
+            sd: 1
 
     class_specific:
       - name: X1
-        effects: [1.0, -1.0, 0.5, 0.5, 0.0]      # Effects for classes 1–5 (relative to ref)
-        distribution:
-          type: normal
+        effects:
+          distribution: rnorm
+          parameters:
+            mean: 0.5
+            sd: 0.1
+        observations:
+          distribution: rnorm
           parameters:
             mean: 0
             sd: 1
 
       - name: X2
-        effects: [0.5, 0.5, -0.5, 0.0, 0.3]
-        distribution:
-          type: normal
+        effects:
+          distribution: runif
           parameters:
-            mean: 0
-            sd: 1
-            
+            min: -3
+            max: 3
+        observations:
+          distribution: runif
+          parameters:
+            min: -2
+            max: 2
+
       - name: X3
-        effects: [0.5, 0.5, -0.5, 0.0, 0.3]
-        distribution:
-          type: normal
+        effects:
+          distribution: rnorm
+          parameters:
+            mean: 2
+            sd: 3
+        observations:
+          distribution: rnorm
           parameters:
             mean: 0
-            sd: 1
-            
+            sd: 0.5
+
       - name: X4
-        effects: [0.5, 0.5, -0.5, 0.0, 0.3]
-        distribution:
-          type: normal
+        effects:
+          distribution: rnorm
+          parameters:
+            mean: -5
+            sd: 2
+        observations:
+          distribution: rnorm
           parameters:
             mean: 0
             sd: 1
-            
+
       - name: X5
-        effects: [0.5, 0.5, -0.5, 0.0, 0.3]
-        distribution:
-          type: normal
+        effects:
+          distribution: rnorm
           parameters:
             mean: 0
             sd: 1
+        observations:
+          distribution: rnorm
+          parameters:
+            mean: 2
+            sd: 0.5
 
-  intercepts: [0.5, -0.5, 0.2, -0.1, 0.0]        # One per non-reference class (length = num_effects)
-
-  interactions: []                               # Optional future interaction terms
-  
-  formula: "Y ~ Z + (. - Z)^2"
+  formula: "Y ~ Z + X1 + X2 + X3 + X4 + X5"
