--- a/applications/poisson_regression/weighted_sum/config/exp_config.yml
+++ b/applications/poisson_regression/weighted_sum/config/exp_config.yml
@@ -7,9 +7,12 @@ experiment:
 
 seed: 2685
 
-design_matrix:
-  n_obs: 100
-  n_covariates: 3
+group_structure:
+  pooled: FALSE
+  n_groups: 5
+  n_per_group: 5
+
+group_covariates:
   intercept: true
   covariates:
     - name: X1
@@ -17,7 +20,7 @@ design_matrix:
       args: [0, 1]
     - name: X2
       distribution: runif
-      args: [0, 5]
+      args: [-2, 2]
     - name: X3
       distribution: rbinom
       args: [1, 0.4]
@@ -26,8 +29,13 @@ beta:
   distribution: rnorm
   args: [0, 1]
 
+exposure:
+  name: t
+  distribution: runif
+  args: [1, 3]  # Example: exposure time between 1 and 3 units per observation
+
 weights:
+  level: group
   distribution: runif
   args: [1, 10]
-  # normalize_sum_to: 100
-  normalize_mean_to: 1.0  # (choose one or the other)
+  normalize_mean_to: 1.0  # or normalize_sum_to: 100
