--- a/applications/multinomial_logistic_regression/shared_effect/config/exp_config.yml
+++ b/applications/multinomial_logistic_regression/shared_effect/config/exp_config.yml
@@ -6,7 +6,7 @@ experiment:
   iter_id: ~
 
 data_generation:
-  seed: 6349
+  seed: 3491
   n_obs: 100
   validate_only: false
   min_obs: 5
@@ -109,4 +109,4 @@ model:
             mean: -0.1
             sd: 0.1
 
-  formula: "Y ~ Z + X1 + X2 + X1:X2"
+  formula: "Y ~ Z + X1 + X2 + X3 + X4 + X1:X2 + X3:X4"
