--- a/config/exps/exp_v3.0.0.yml
+++ b/config/exps/exp_v3.0.0.yml
@@ -1,37 +1,34 @@
 experiment:
-  app: poisson_regression
-  estimand: weighted_sum
+  app: poisson
+  estimand: group_rates_weighted_sum
+  model: naive_group_rates
   id: exp_v3.0.0
   sim_id: ~
   iter_id: ~
+  description: |
+    Estimate a separate Poisson rate (λ_j) for each group using observed counts  and known exposure times. No covariates or regression structure; each group  is treated independently. Group-level weights can vary and influence summaries  (e.g., weighted averages).
 seed: 2685
-group_structure:
-  pooled: false
+groups:
   n_groups: 5
-  n_per_group: 50
-group_covariates:
-  intercept: true
-  covariates:
-  - name: X1
-    distribution: rnorm
-    args:
-    - 0
-    - 1
-  - name: X2
-    distribution: runif
-    args:
-    - -2
-    - 2
-  - name: X3
-    distribution: rbinom
-    args:
-    - 1
-    - 0.4
-beta:
-  distribution: rnorm
-  args:
-  - 0
-  - 1
+  n_per_group:
+  - 10
+  - 10
+  - 10
+  - 10
+  - 10
+  labels:
+  - A
+  - B
+  - C
+  - D
+  - E
+lambda:
+  values:
+  - 1.0
+  - 1.5
+  - 2.0
+  - 2.5
+  - 3.0
 exposure:
   name: t
   distribution: runif
@@ -39,7 +36,6 @@ exposure:
   - 1
   - 3
 weights:
-  level: group
   distribution: runif
   args:
   - 1
