--- a/experiments/exp_v5.0.0/simulations/sim_01/iter_01/config_snapshot.yml
+++ b/experiments/exp_v5.0.0/simulations/sim_01/iter_01/config_snapshot.yml
@@ -3,8 +3,8 @@ experiment:
   estimand: group_rates_weighted_sum
   model: fixed_effects_varying_slope
   id: exp_v5.0.0
-  sim_id: ~
-  iter_id: ~
+  sim_id: sim_01
+  iter_id: iter_01
   description: |
     Estimate group-specific Poisson rates within a fixed-effects regression with covariates. Observed counts are modeled with known exposure times (offsets), categorical indicators for groups, and additional covariates. Each group has its own intercept and slope for at least one covariate, while other covariate effects can be shared across groups. Group-level weights are applied when forming summaries such as weighted sums or averages of estimated rates. Rates can be evaluated at particular covariate values (reference values) or marginalized over a covariate distribution.
 seed: 1762
