--- a/experiments/exp_v5.0.0/simulations/sim_01/iter_01/config_snapshot.yml
+++ b/experiments/exp_v5.0.0/simulations/sim_01/iter_01/config_snapshot.yml
@@ -1,72 +1,80 @@
 experiment:
   app: poisson
   estimand: group_rates_weighted_sum
-  model: fixed_effects_varying_slope
+  model: fixed_effects_regression
   id: exp_v5.0.0
   sim_id: sim_01
   iter_id: iter_01
   description: |
-    Estimate group-specific Poisson rates within a fixed-effects regression with covariates. Observed counts are modeled with known exposure times (offsets), categorical indicators for groups, and additional covariates. Each group has its own intercept and slope for at least one covariate, while other covariate effects can be shared across groups. Group-level weights are applied when forming summaries such as weighted sums or averages of estimated rates. Rates can be evaluated at particular covariate values (reference values) or marginalized over a covariate distribution.
-seed: 1762
+    Estimate group-specific Poisson rates within a fixed-effects regression with covariates. Observed counts are modeled with known exposure times (offsets), categorical indicators for groups, and additional covariates. Each group has its own intercept and slope for at least one covariate, while other covariate effects can be shared across groups. Group-level weights are applied when forming summaries such as weighted sums or averages of estimated rates. Group rates can be evaluated at particular covariate values (reference values) or marginalized over a covariate distribution.
 model:
+  seed: 6085
   groups:
-    n_groups: 5
-    n_per_group:
-      mode: fixed
-      args: 3
-    labels: auto_upper
+    A: 3
+    B: 3
+    C: 3
+  intercepts:
+    type: heterogeneous
+    symbol: α
+    distribution:
+      name: rnorm
+      args:
+      - 0.0
+      - 0.2
   covariates:
-  - name: X1
-    type: continuous
-    distribution: runif
-    args:
-    - -1.0
-    - 1.0
-    varying_slope: false
-  - name: X2
-    type: continuous
-    distribution: rnorm
-    args:
-    - 0.0
-    - 1.0
-    varying_slope: true
-  true_params:
-    Beta_0:
-      intercepts:
-        distribution: runif
+  - type: homogeneous
+    variable:
+      symbol: X1
+      distribution:
+        name: runif
         args:
+        - -1.0
         - 1.0
-        - 5.0
-        scale: rate
-      coefficients:
-        X1:
-          mode: fixed
-          args: 0.2
-        X2:
-          mode: sample
-          distribution: runif
-          args:
-          - -1.0
-          - 1.0
-exposure:
-  name: t
-  distribution: runif
-  args:
-  - 2
-  - 4
-weights:
-  distribution: runif
-  args:
-  - 1
-  - 10
-  normalize_mean_to: 1.0
-evaluation:
-  mode: reference
-  reference:
-    xstar:
-      X1: 0.0
-      X2: 0.0
-  marginal:
-    over: sample
-    summary: mean
+    coefficient:
+      symbol: γ1
+      distribution:
+        name: rnorm
+        args:
+        - 0.2
+        - 0.05
+  - type: heterogeneous
+    variable:
+      symbol: X2
+      distribution:
+        name: rnorm
+        args:
+        - 0.0
+        - 1.0
+    coefficient:
+      symbol: ζ2
+      distribution:
+        name: rnorm
+        args:
+        - 0.5
+        - 0.1
+  exposure:
+    symbol: t
+    distribution:
+      name: runif
+      args:
+      - 2
+      - 4
+  weights:
+    symbol: w
+    distribution:
+      name: runif
+      args:
+      - 1
+      - 10
+    normalize_mean_to: 1.0
+  evaluation:
+    mode: marginal
+    reference:
+      xstar:
+        X1: 0.0
+        X2: 0.0
+    marginal:
+      over: sample
+      summary: mean
+      n_mc: 1e6
 
