--- a/experiments/exp_v5.0.0/simulations/sim_01/iter_02/config_snapshot.yml
+++ b/experiments/exp_v5.0.0/simulations/sim_01/iter_02/config_snapshot.yml
@@ -1,72 +1,57 @@
 experiment:
   app: poisson
   estimand: group_rates_weighted_sum
-  model: fixed_effects_varying_slope
-  id: exp_v5.1.0
-  sim_id: ~
-  iter_id: ~
+  model: fixed_effects_regression
+  id: exp_v5.0.0
+  sim_id: sim_01
+  iter_id: iter_02
   description: |
     Estimate group-specific Poisson rates within a fixed-effects regression with covariates. Observed counts are modeled with known exposure times (offsets), categorical indicators for groups, and additional covariates. Each group has its own intercept and slope for at least one covariate, while other covariate effects can be shared across groups. Group-level weights are applied when forming summaries such as weighted sums or averages of estimated rates. Group rates can be evaluated at particular covariate values (reference values) or marginalized over a covariate distribution.
 model:
-  seed: 1762
+  seed: 6085
   groups:
-    n_groups: 3
-    n_per_group:
-      mode: fixed
-      args: 3
-    labels: auto_upper
+    A: 3
+    B: 3
+    C: 3
   intercepts:
-    common:
-      symbol: κ
+    type: heterogeneous
+    symbol: α
+    distribution:
+      name: rnorm
+      args:
+      - 0.0
+      - 0.2
+  covariates:
+  - type: homogeneous
+    variable:
+      symbol: X1
+      distribution:
+        name: runif
+        args:
+        - -1.0
+        - 1.0
+    coefficient:
+      symbol: γ1
+      distribution:
+        name: rnorm
+        args:
+        - 0.2
+        - 0.05
+  - type: heterogeneous
+    variable:
+      symbol: X2
       distribution:
         name: rnorm
         args:
         - 0.0
         - 1.0
-    group_deviation:
-      symbol: δ
+    coefficient:
+      symbol: ζ2
       distribution:
         name: rnorm
         args:
-        - 0.0
-        - 0.2
-  covariates:
-  - name: X1
-    distribution:
-      name: runif
-      args:
-      - -1.0
-      - 1.0
-    slope:
-      baseline:
-        symbol: ρ
-        distribution:
-          name: rnorm
-          args:
-          - 0.2
-          - 0.05
-      group_deviation: ~
-  - name: X2
-    distribution:
-      name: rnorm
-      args:
-      - 0.0
-      - 1.0
-    slope:
-      baseline:
-        symbol: γ
-        distribution:
-          name: rnorm
-          args:
-          - 0.5
-          - 0.1
-      group_deviation:
-        symbol: ζ
-        distribution:
-          name: rnorm
-          args:
-          - 0.0
-          - 0.05
+        - 0.5
+        - 0.1
   exposure:
     symbol: t
     distribution:
@@ -75,7 +60,7 @@ model:
       - 2
       - 4
   weights:
-    symbol: α
+    symbol: w
     distribution:
       name: runif
       args:
@@ -91,4 +76,5 @@ model:
     marginal:
       over: sample
       summary: mean
+      n_mc: 1e6
 
