--- a/applications/poisson/group_rates_weighted_sum/fixed_effects_regression/config/model_config.yml
+++ b/applications/poisson/group_rates_weighted_sum/fixed_effects_regression/config/model_config.yml
@@ -15,27 +15,29 @@ experiment:
 
 model:
   
-  seed: 6085
+  seed: 3481
 
   groups:
-    A: 3
-    B: 3
-    C: 3
+    A: 13
+    B: 14
+    C: 11
+    D: 15
+    E: 12
     
   intercepts:
     type: heterogeneous # Can be either "homogeneous" (fixed across all groups) or "heterogeneous" (allowed to vary across all groups)
     symbol: α
     distribution: 
       name: rnorm
-      args: [0.0, 0.2]
+      args: [1.5, 0.5]
 
   covariates:
     - type: homogeneous 
       variable:
         symbol: X1
         distribution:
-          name: runif
-          args: [-1.0, 1.0]
+          name: rexp
+          args: [1.0]
       coefficient:
           symbol: γ1
           distribution: 
