--- a/applications/poisson/group_rates_weighted_sum/fixed_effects_regression/config/opt_config.yml
+++ b/applications/poisson/group_rates_weighted_sum/fixed_effects_regression/config/opt_config.yml
@@ -1,9 +1,7 @@
 IL:
-  step_size: 0.05
-  fine_step_size: 0.025
-  fine_window: 0.1
-  num_std_errors: [-4, 4]
-  chunk_size: 1
+  increment: 0.25
+  num_std_errors: 3
+  chunk_size: 4
 PL: 
   step_size: 0.05
   fine_step_size: 0.025
