--- a/experiments/exp_v5.1.1/simulations/sim_01/iter_0001/config_snapshot.yml
+++ b/experiments/exp_v5.1.1/simulations/sim_01/iter_0001/config_snapshot.yml
@@ -3,8 +3,8 @@ experiment:
   estimand: group_rates_weighted_sum
   model: fixed_effects_regression
   id: exp_v5.1.1
-  sim_id: ~
-  iter_id: ~
+  sim_id: sim_01
+  iter_id: iter_0001
   description: |
     Estimate group-specific Poisson rates within a fixed-effects regression with covariates. Observed counts are modeled with known exposure times (offsets), categorical indicators for groups, and additional covariates. Each group has its own intercept and slope for at least one covariate, while other covariate effects can be shared across groups. Group-level weights are applied when forming summaries such as weighted sums or averages of estimated rates. Group rates can be evaluated at particular covariate values (reference values) or marginalized over a covariate distribution.
 model:
@@ -77,4 +77,19 @@ model:
       over: sample
       summary: mean
       n_mc: 1e7
+optimization_specs:
+  IL:
+    increment: 0.25
+    num_std_errors: 3
+    chunk_size: 4
+    num_workers: 64
+    max_cores: 64
+  PL:
+    step_size: 0.05
+    fine_step_size: 0.025
+    fine_window: 0.1
+    alpha_levels:
+    - 0.1
+    - 0.05
+    - 0.01
 
