--- a/applications/negative_binomial/process_rates_weighted_sum/naive_rates/config/model_config.yml
+++ b/applications/negative_binomial/process_rates_weighted_sum/naive_rates/config/model_config.yml
@@ -7,33 +7,64 @@ experiment:
   iter_id: ~
   description: >
     Estimate a separate rate (θ_j) for each negative binomial process using observed counts
-    and known exposure times. No covariates or regression structure; each process 
-    is treated independently. Process-level weights can vary and influence summaries 
-    (e.g., weighted averages).
+    and known exposure times. No covariates or regression structure; each process is treated
+    independently. Process-level weights influence the weighted-sum estimand ψ.
 
 seed: 9406
 
 processes:
   n_processes: 5
-  n_per_process: 10             # Single number applies to all processes
-  labels: auto_upper           # Options: auto_upper, auto_lower, auto_num, or explicit list
+  n_per_process: 10
+  labels: auto_upper          # auto_upper | auto_lower | auto_num | explicit list
 
 theta:
-  distribution: runif           # Options: uniform, normal, lognormal, fixed
-  args: [1.0, 5.0]              # If uniform → min, max
-  per_process: true             # If true → draw per process; if false → one value applied to all
-  
+  distribution: runif
+  args: [1.0, 5.0]
+  per_process: true
+
 phi:
   distribution: rgamma
   args: [5.0, 2.0]
   per_process: true
-  
+
 exposure:
   name: t
   distribution: runif
-  args: [1, 3]                  # t_i ~ U(1, 3)
+  args: [1, 3]               # t_i ~ U(1,3)
 
 weights:
   distribution: runif
   args: [1, 10]
   normalize_mean_to: 1.0
+
+optimization_specs:
+
+  IL:  # Integrated Likelihood settings
+    num_std_errors: 3
+    step_size: 0.25
+    fine_step_size: 0.05
+    fine_window: 1.0
+
+    chunk_size: 1             # branches per worker
+    num_workers: 4            # total branches = chunk_size * num_workers
+
+    ratio_threshold: 100
+    n_mc: 100000
+    p_cutoff: 1e-12
+    max_y_cap: 1e6
+
+    localsolver: SLSQP
+    xtol_rel: 1e-8
+    maxeval: 1000
+
+    return_full: false        # return optimizer diagnostics?
+    fix_phi: true             # hold φ = φ_MLE for profiling ψ
+    trace: false              # verbose output for debugging
+
+  PL:  # Profile Likelihood settings
+    step_size: 0.25
+    fine_step_size: 0.05
+    fine_window: 1.0
+
+    alpha_levels: [0.05]      # can list multiple (e.g., [0.05, 0.01])
+    trace: false
