--- a/experiments/exp_v7.0.0/simulations/sim_01/iter_01/config_snapshot.yml
+++ b/experiments/exp_v7.0.0/simulations/sim_01/iter_01/config_snapshot.yml
@@ -4,7 +4,7 @@ experiment:
   model: naive_rates
   id: exp_v7.0.0
   sim_id: sim_01
-  iter_id: iter_0001
+  iter_id: iter_01
   description: |
     Estimate a separate rate (θ_j) for each negative binomial process using observed counts and known exposure times. No covariates or regression structure; each process is treated independently. Process-level weights influence the weighted-sum estimand ψ.
 seed: 8491
@@ -12,18 +12,23 @@ processes:
   n_processes: 5
   n_per_process: 10
   labels: auto_upper
-theta:
-  distribution: runif
-  args:
-  - 1.0
-  - 5.0
-  per_process: yes
-phi:
+omega:
   distribution: rgamma
   args:
   - 5.0
+  - 1.0
+theta:
+  distribution: rgamma
+  args:
+  - 8.0
   - 2.0
-  per_process: yes
+  per_process: true
+phi:
+  distribution: rgamma
+  args:
+  - 10.0
+  - 3.0
+  per_process: true
 exposure:
   name: t
   distribution: runif
@@ -38,26 +43,28 @@ weights:
   normalize_mean_to: 1.0
 optimization_specs:
   IL:
-    num_std_errors: 3
-    step_size: 0.25
-    fine_step_size: 0.05
-    fine_window: 1.0
-    delta_curv: 0.05
+    num_std_errors: 6
+    increment: 0.05
+    alpha_levels:
+    - 0.01
+    - 0.05
+    - 0.1
     chunk_size: 1
-    num_workers: 64
-    ratio_threshold: 10000000
-    n_mc: 100000
-    p_cutoff: 1.0e-12
-    max_y_cap: 1000000.0
+    num_workers: 4
+    p_cutoff: 1e-12
+    max_y_cap: 1e6
     localsolver: SLSQP
-    xtol_rel: 1.0e-08
+    xtol_rel: 1e-8
     maxeval: 1000
-    return_full: no
-    fix_phi: yes
-    trace: no
   PL:
-    step_size: 0.25
-    fine_step_size: 0.05
-    fine_window: 1.0
-    alpha_levels: 0.05
-    trace: no
+    increment: 0.05
+    alpha_levels:
+    - 0.01
+    - 0.05
+    - 0.1
+    p_cutoff: 1e-12
+    max_y_cap: 1e6
+    localsolver: SLSQP
+    xtol_rel: 1e-8
+    maxeval: 1000
+
