--- a/applications/negative_binomial/process_rates_weighted_sum/naive_rates/config/model_config.yml
+++ b/applications/negative_binomial/process_rates_weighted_sum/naive_rates/config/model_config.yml
@@ -10,7 +10,7 @@ experiment:
     and known exposure times. No covariates or regression structure; each process is treated
     independently. Process-level weights influence the weighted-sum estimand ψ.
 
-seed: 8491
+seed: 4972
 
 processes:
   n_processes: 5
@@ -51,11 +51,12 @@ optimization_specs:
 
     # --- parallel branch generation ---
     chunk_size: 1              # branches per worker
-    num_workers: 4             # total branches = chunk_size * num_workers
+    num_workers: 8             # total branches = chunk_size * num_workers
 
     # --- inner solver controls ---
     p_cutoff: 1e-12
     max_y_cap: 1e6
+    max_retries: 5
     localsolver: SLSQP
     xtol_rel: 1e-8
     maxeval: 1000
@@ -68,6 +69,7 @@ optimization_specs:
     # --- inner solver controls ---
     p_cutoff: 1e-12
     max_y_cap: 1e6
+    max_retries: 5
     localsolver: SLSQP
     xtol_rel: 1e-8
     maxeval: 1000
